add structur folder and packge in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.thera</groupId>
+            <artifactId>TheraWebSolutionsServer</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
